--- a/style.css
+++ b/style.css
@@ -1,47 +1,91 @@
 body{
-		margin: 0px;
-		font-family: 'ABeeZee',Helvetica,Arial,Lucida,sans-serif;
-		font-size: 18px;
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+		overflow-x: hidden;
+		font-size: 16px;
+		font-family: 'Poppins', sans-serif;
+		background-color:#edf0f3;
+		width: 100vw;
+		min-height:100vh; 
 	}
 	.topheading{
 		width: 100vw;
 		height: 10vh;
-		background-image: linear-gradient(to right,#2b87da 19%,#29c4a9 62%);
-		position: relative;
+		background-image:linear-gradient(to right,#2b87da 19%,#87a7f3 62%);
+		/*background-image: linear-gradient(to right,#2b87da 35%,#29c4a9 92%);*/
+    	position: relative;
+    	box-shadow: -1px -2px 20px #ffffff,1px 2px 3px #000000; 
+
 	}
 	.sidenav{
 		z-index: 1;
-		width: 15vw;
+		width: 10vw;
 		top: 0px;
 		padding-top: 10vh;
-		background-color: rgba(0, 0, 0, 0.7);
+		background-color: rgba(0, 0, 0);
 		height: 100vh;
+		
+		background-size: cover;
+
 		position: fixed;
 	}
 	.sidenav a{
 		display: block;
 		text-decoration: none;
 		color: white;
-		padding: 10% 30% 1% 20%;
-		font-size: 25px;
+		text-align: center;
+		font-size: 18px;
+		margin:1em 0.5em;
+	}
+	.sidenav a:hover::before,a.active::before{
+		content: '';
+		background-image: url('png/thumb-up.png');
+		width: 18px;
+		height: 18px;
+		margin-right: 0.2em;
+		display: inline-block;
+		background-size: 80% 80%;
+		background-repeat: no-repeat;
 	}
 	.sidenav a:hover , a.active{
 		border-bottom: 2px inset;
-		border-bottom-width: 2px;
-    	border-color: #2b87da;
-    	margin: 0% 8%;
+        border-bottom-width: 2px;
+    	border-color: #00c5f5;
+    	
 	}
 	.container{
-		margin:3% 18%; 
+		width: 90vw;
+		position: absolute;
+		right: 0;
+		display:flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		background-size: contain;
+		background-image: url('png/bgimg.png');
+
 	}
+	#logo{
+		
+    	
+   	 	
+    	height: 80px;
+    	margin-bottom: 10px;
+    /* width: 00px; */
+    	position: relative;
+
+	}
+	
 	.piechart , .linechart{
-		margin-top: 3%;
+		
+        margin-bottom: 4%;
 		box-shadow: -1px -2px 10px #c7c7c7,1px 2px 5px#c7c7c7;
 		width: 75vw;
 		height: 100%;
 		position: relative;
 		padding: 3%;
-		background-color: rgba(227, 223, 213, 0.2);
+		background:rgba(237, 240, 243, 0.81);
 	}
 	.linechart{
 		height: 500px;
@@ -49,12 +93,14 @@ body{
 	
 	table{width: 100%;}
 	table, th, td {
-	  border: 1px solid black;
+	 
 	  border-collapse: collapse;
 	}
 	th, td {
 	  padding:25px auto;
 	  text-align: center;
+	  border-left: 1px solid black;
+   	 border-right: 1px solid black;
 	}
 	
 
@@ -62,25 +108,33 @@ body{
 	 width:20%;
 	 display: none;
 	 margin-left: 0%;}
-
+     #chart-container_id{
+     	display: flex;
+     	justify-content: center;
+     	align-items: center;
+     }
 	 .chart-container.active{
-	 	display: flex;
+	 	display: inline;
+        height: 200px;
 	 }
 
 
 	 #map_and_image{
-		width: 79vw;
+	 	margin-top: 4%;
+		width: 80vw;
 		height: 60vh;
 		display: flex;
 		box-shadow: -1px -2px 10px #c7c7c7,1px 2px 5px#c7c7c7;
 		justify-content: center;
 		align-items: center;
+		margin-bottom: 4%;
 	}
 	#heremap{
 		float: left;
 		width: 72%;
 		height: 100%;
 		padding:1px 0 0 0;
+		background: #edf0f3;
 		
 	}
 	#right_img{
@@ -94,18 +148,27 @@ body{
     	height:100%;
 
     }
+   
     #ym{
-    	background-image: linear-gradient(to right,#2b87da 19%,#29c4a9 62%);
-    	background-color: black;
+    	background-image:linear-gradient(to right,#2b87da 19%,#87a7f3 62%);
+		background-color: black;
     	color: white;
-    	width: 200px;
-    	font-family:  'ABeeZee',Helvetica,Arial,Lucida,sans-serif;
+    	min-width: 200px;
+    	font-family:  'Poppins','ABeeZee',Helvetica,Arial,Lucida,sans-serif;
     	font-size: 16px;
+    	outline: none;
     	border-radius: 20px;
-    	padding: 5px;
+    	padding: 5px 10px;
+    	border:none;
     	box-shadow: -1px -2px 20px #ffffff,1px 2px 3px #000000; 
 
     }
+    th{
+			width:calc(100%/5);
+		}
+
+  
+
     label{
 		padding: 3%;
 		font-size:30px;
@@ -120,36 +183,30 @@ body{
     .H_ib_body {
     		background: #443f3fb5;
     }
-
-    
-	.world , .india{
-		font-family: 'ABeeZee',Helvetica,Arial,Lucida,sans-serif;
-		
-		box-shadow: -1px -2px 10px #c7c7c7,1px 2px 5px#c7c7c7;
-		width: 75vw;
-		height: 100%;
-		position: relative;
-		padding: 1%;
-		background-color: rgba(227, 223, 213, 0.2);
-	}
-	.india{
-		top: 30px;
-	}
-
-	.world ul,.india ul{
-		line-height: 1.7em;
-	}
+    .caption{
+    	background-image: linear-gradient(to right,#2b87da 19%,#87a7f3 62%);
+    color: white;
+    width: 80vw;
+    text-align: center;
+    padding: 10px;
+    font-size: 18px;
+    letter-spacing: 1px;
+    margin-top: 4%;
 
 
+    }
     @media all and (max-width: 768px)
     {
+    	#chart-container_id{
+    		flex-direction: column;
+    	}
     	label{
     		display: block;
     		cursor: pointer;
     	}
     	.sidenav{
     		width: 100%;
-    		padding-top: 0px;
+    	    background-color: rgba(0,0,0,0.6);
     		height: 35vh; 
     		display: none;
     		position: relative;
@@ -157,14 +214,16 @@ body{
     	.sidenav a{
     		display: block;
     		font-size: 20px;
+    		margin: 5% 30%;
     	}
     	#toggle:checked + .sidenav{display:block;}
     	.container{
-			margin:3%; 
+			width: 100vw;
 		}	
     	#map_and_image{
     		flex-direction: column;
     		width: 95vw;
+    		margin: 15% auto;
     		max-height: none;
     		min-height: 150vh;
     	}
@@ -177,6 +236,9 @@ body{
     		height: 60vh;
 
     	}
+    	.caption{
+    		width: 90vw;
+    	}
     	#right_img img{
     		width: 100%;
     		height: 100%;
@@ -184,15 +246,27 @@ body{
     	th td{
 			font-size: 14px;
 		}
-		table{width: 80%;}
+		th{
+			width:calc(100%/5);
+		}
+		table{width: 100%;}
 
 		.chart-container.active{
 			width:100%;
+		    height: 200px;
 			display: block;
 		}
-		.linechart{
-			width:95%;
-			height: 300px;
-			margin:0 auto;
+		.piechart,.linechart{
+			width: 90vw;
+			
+			margin-bottom: 20%;
+			padding:20px 10px;
 		}
+		.piechart{
+			min-height: 100px;
+		}
+		.linechart{
+			height: 350px;
+		}
+		
     }	
