--- a/style.css
+++ b/style.css
@@ -58,13 +58,35 @@ body{
 		width: 90vw;
 		position: absolute;
 		right: 0;
+		min-height: 100vh;
 		display:flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		background-size: contain;
+		background-size: 100%;
 		background-image: url('png/bgimg.png');
 
+	}
+
+	.world , .india{
+		font-family:'Poppins', 'ABeeZee',Helvetica,Arial,Lucida,sans-serif;
+		
+		box-shadow: -1px -2px 10px #c7c7c7,1px 2px 5px#c7c7c7;
+		width: 70vw;
+		height: 100%;
+		position: relative;
+		padding: 3%;
+		margin-top: 4%;
+		background-color: rgba(227, 223, 213, 0.2);
+	}
+	.world h3,.india h3{
+	 color:#2b87da
+    }
+	.world ul,.india ul{
+		line-height: 1.7em;
+	}
+	.world ul li,.india ul li{
+		list-style: square;
 	}
 	#logo{
 		
@@ -206,8 +228,8 @@ body{
     	}
     	.sidenav{
     		width: 100%;
-    	    background-color: rgba(0,0,0,0.6);
-    		height: 35vh; 
+    	    background-color: rgba(0,0,0,0.8);
+    		height: 100vh; 
     		display: none;
     		position: relative;
     	}
@@ -267,6 +289,9 @@ body{
 		}
 		.linechart{
 			height: 350px;
+		}
+		.world , .india{
+			width: 90vw;
 		}
 		
     }	
