--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 		width: 100vw;
 		height: 10vh;
 		background-image:linear-gradient(to right,#2b87da 19%,#87a7f3 62%);
-		/*background-image: linear-gradient(to right,#2b87da 35%,#29c4a9 92%);*/
+		/background-image: linear-gradient(to right,#2b87da 35%,#29c4a9 92%);/
     	position: relative;
     	box-shadow: -1px -2px 20px #ffffff,1px 2px 3px #000000; 
 
@@ -211,7 +211,7 @@ body{
     width: 80vw;
     text-align: center;
     padding: 10px;
-    font-size: 18px;
+    font-size: 16px;
     letter-spacing: 1px;
     margin-top: 4%;
 
@@ -241,29 +241,29 @@ body{
     	#toggle:checked + .sidenav{display:block;}
     	.container{
 			width: 100vw;
+		background-image:none;
 		}	
     	#map_and_image{
     		flex-direction: column;
-    		width: 95vw;
+    		width: 80vw;
     		margin: 15% auto;
     		max-height: none;
-    		min-height: 150vh;
+    		min-height: 80vh;
     	}
     	#heremap{
     		width: 100%;
-    		height:80vh; 
+    		height:100%; 
     	}
     	#right_img{
-    		width: 100%;
-    		height: 60vh;
+    		display:none;
 
     	}
     	.caption{
-    		width: 90vw;
+    		width: 85vw;
+		font-size:14px;
     	}
     	#right_img img{
-    		width: 100%;
-    		height: 100%;
+    		display:none;
     	}
     	th td{
 			font-size: 14px;
@@ -279,7 +279,7 @@ body{
 			display: block;
 		}
 		.piechart,.linechart{
-			width: 90vw;
+			width: 85vw;
 			
 			margin-bottom: 20%;
 			padding:20px 10px;
@@ -291,7 +291,7 @@ body{
 			height: 350px;
 		}
 		.world , .india{
-			width: 90vw;
+			width: 85vw;
 		}
 		
-    }	
+    }
