--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ body{
     	box-shadow: -1px -2px 20px #ffffff,1px 2px 3px #000000; 
 
 	}
+	#right_img_notice{
+		display: none;
+	}
+	#right_img_notice .caption{
+		display: none;
+	}
 	.sidenav{
 		z-index: 1;
 		width: 10vw;
@@ -211,14 +217,17 @@ body{
     width: 80vw;
     text-align: center;
     padding: 10px;
-    font-size: 16px;
+    font-size: 14px;
     letter-spacing: 1px;
-    margin-top: 4%;
+  
 
 
     }
     @media all and (max-width: 768px)
     {
+    	#right_img_notice{
+    		display: block;
+    	}
     	#chart-container_id{
     		flex-direction: column;
     	}
@@ -245,11 +254,17 @@ body{
 		}	
     	#map_and_image{
     		flex-direction: column;
-    		width: 80vw;
+    		width: 85vw;
     		margin: 15% auto;
     		max-height: none;
     		min-height: 80vh;
     	}
+    	#right_img_notice .caption{
+		display: block;
+		margin:0 0; 
+		padding: 0;
+		margin-top: 0;
+	}
     	#heremap{
     		width: 100%;
     		height:100%; 
